--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,3 +1,9 @@
+@mixin sm {
+  @media (min-width: 425px) {
+    @content;
+  }
+}
+
 @mixin md {
   @media (min-width: 768px) {
     @content;
@@ -12,6 +18,12 @@
 
 @mixin xl {
   @media (min-width: 1440px) {
+    @content;
+  }
+}
+
+@mixin xxl {
+  @media (min-width: 2560px) {
     @content;
   }
 }
