--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,3 +3,22 @@
   padding: 0px;
   margin: 0px;
 }
+
+body {
+  background-color: #121212;
+  width: 100vw;
+  min-height: 100vh;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  height: 5px;
+  width: 7px;
+  opacity: 0.1;
+}
+
+::-webkit-scrollbar-thumb {
+  /* border-radius: 5px; */
+  background-color: azure;
+  opacity: 0.1;
+}
