--- a/src/styles/about/about.module.scss
+++ b/src/styles/about/about.module.scss
@@ -133,7 +133,7 @@
     gap: 40px;
     z-index: 20;
 
-    p {
+    .description {
       text-align: center;
     }
 
@@ -165,7 +165,7 @@
       }
     }
 
-    p {
+    .description {
       text-align: center;
     }
 
