--- a/src/styles/about/about.module.scss
+++ b/src/styles/about/about.module.scss
@@ -42,6 +42,7 @@
       text-align: center;
       font-size: 0.8rem;
       line-height: 1.5;
+      background-color: #121212;
 
       @include sm {
         font-size: 1rem;
@@ -65,6 +66,7 @@
     p {
       text-align: center;
       font-size: 0.8rem;
+      background-color: #121212;
 
       @include sm {
         font-size: 1rem;
@@ -135,6 +137,7 @@
 
     .description {
       text-align: center;
+      background-color: #121212;
     }
 
     .seccionTitle {
@@ -167,6 +170,7 @@
 
     .description {
       text-align: center;
+      background-color: #121212;
     }
 
     .degrees {
