--- a/src/styles/about/experienceCard.module.scss
+++ b/src/styles/about/experienceCard.module.scss
@@ -1,13 +1,10 @@
-@import "mixins.scss";
+@import "../mixins.scss";
 
 .experienceCard {
   display: flex;
   flex-direction: column;
   gap: 10px;
   background-color: #121212;
-  font-family: "Mulish", system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif;
 
   @include xl {
     padding: 0 30px 30px;
@@ -18,7 +15,7 @@
     flex-direction: column;
     gap: 5px;
     width: 100%;
-    color: #4682b4;
+    color: lightblue;
     font-weight: bold;
     font-size: 1rem;
 
