--- a/src/styles/contact/contact.module.scss
+++ b/src/styles/contact/contact.module.scss
@@ -7,13 +7,13 @@
   height: 100vh;
   position: relative;
   z-index: 20;
-  padding: 20px;
+  padding: 80px 20px 20px;
 
   .contact {
     display: flex;
     flex-direction: column;
-    margin-bottom: 1.25rem;
     width: min(100%, 38rem);
+    height: min(100%, 400px);
     text-align: center;
     align-items: center;
     gap: 20px;
@@ -51,7 +51,6 @@
       width: 100%;
 
       input {
-        height: 3.5rem;
         padding: 1rem;
         color: white;
         border-radius: 0.375rem;
@@ -61,7 +60,7 @@
       }
 
       textarea {
-        height: 13rem;
+        height: 8rem;
         padding: 1rem;
         border-radius: 0.375rem;
         background-color: #121212;
@@ -72,7 +71,7 @@
 
       .input::placeholder,
       .textarea::placeholder {
-        color: white; /* Cambia este color al que desees para el placeholder */
+        color: white;
       }
     }
   }
